veil-tests/src/compile_tests/fail/redact_display_enum_variant.stderr
error: `#[redact(display)]` is invalid here
 --> src/compile_tests/fail/redact_display_enum_variant.rs:5:5
  |
5 |     #[redact(variant, display)]
  |     ^

error: expected `#[redact(all, ...)]` or `#[redact(variant, ...)]`, or both as separate attributes
  --> src/compile_tests/fail/redact_display_enum_variant.rs:11:5
   |
11 |     #[redact(display)]
   |     ^

error: `#[redact(display)]` is invalid here
  --> src/compile_tests/fail/redact_display_enum_variant.rs:16:1
   |
16 | #[redact(all, variant, display)]
   | ^
